--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Суши из Хрюши</title>
+    <title>Суши-Хуюши</title>
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
